overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ header{
 
 footer{
     background: rgb(10,10,11);
-    background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(10,10,11,1) 20%);
+    background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(10,10,11,1) 37%);
     color: #fff;
     position: absolute;
     bottom: 0;
@@ -204,9 +204,11 @@ button:active {
 
 
 .card-section-left{
-    position: relative;
+    position: absolute;
     left: 10%;
-    top: -300px;
+    height: 600px;
+    overflow: hidden;
+    width: 350px;
 }
 
 .card {
@@ -220,10 +222,11 @@ button:active {
     background-color: #fff;
     width: 300px;
     z-index: 1000;
-    box-shadow: 5px 5px 10px #040406;
+    box-shadow: 0 0 10px #040406;
     opacity: 0;
     transition: all 500ms;
     top: 500px;
+    left: 5px;
 }
 
 .card img{
